[package]
name = "linked_list"
version = "1.0.0"
authors = ["Tom Dodd <joedodd35@gmail.com>"]
edition = "2018"

[[bin]]
name = "linked_list"
path = "src/main.rs"

[lib]
name = "linked_list"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0"
once_cell = "1"
regex = "1"
